--- a/src/options.html
+++ b/src/options.html
@@ -30,31 +30,27 @@
         Select number lengths to process
         <div class="digit-options">
           <label class="tickbox">
-            <input type="checkbox" />
+            <input type="checkbox" value="6" />
             6
           </label>
           <label class="tickbox">
-            <input type="checkbox" />
+            <input type="checkbox" value="5" />
             5
           </label>
           <label class="tickbox">
-            <input type="checkbox" />
+            <input type="checkbox" value="4" />
             4
           </label>
           <label class="tickbox">
-            <input type="checkbox" />
+            <input type="checkbox" value="3" />
             3
           </label>
           <label class="tickbox">
-            <input type="checkbox" />
-            3
-          </label>
-          <label class="tickbox">
-            <input type="checkbox" />
+            <input type="checkbox" value="2" />
             2
           </label>
           <label class="tickbox">
-            <input type="checkbox" />
+            <input type="checkbox" value="1" />
             1
           </label>
         </div>
