it runs. need style files. and handle options.

--- a/src/options.html
+++ b/src/options.html
@@ -19,7 +19,7 @@
     ></script>
     <script defer type="module" src="options.js"></script>
   </head>
-  <body>
+  <body class="maria">
     <header>
       <h1>
         Maria options
