--- a/src/options.html
+++ b/src/options.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      .digit-options {
-        display: flex;
-        flex-direction: column;
-      }
-
-      .tickbox {
-        display: inline-flex;
-        align-items: center;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="options.css" />
     <script
       defer
       type="text/javascript"
@@ -20,7 +11,14 @@
     <script defer type="module" src="options.js"></script>
   </head>
   <body class="maria">
-    <header>
+    <header class="maria__heading maria__heading--spaced">
+      <img
+        class="maria__image"
+        width="128"
+        height="128"
+        src="images/maria_128x128.png"
+        alt="Maria"
+      />
       <h1>
         Maria options
       </h1>
