--- a/src/options.html
+++ b/src/options.html
@@ -28,27 +28,27 @@
         Select number lengths to process
         <div class="digit-options">
           <label class="tickbox">
-            <input type="checkbox" value="6" />
+            <input type="checkbox" name="digits" value="6" />
             6
           </label>
           <label class="tickbox">
-            <input type="checkbox" value="5" />
+            <input type="checkbox" name="digits" value="5" />
             5
           </label>
           <label class="tickbox">
-            <input type="checkbox" value="4" />
+            <input type="checkbox" name="digits" value="4" />
             4
           </label>
           <label class="tickbox">
-            <input type="checkbox" value="3" />
+            <input type="checkbox" name="digits" value="3" />
             3
           </label>
           <label class="tickbox">
-            <input type="checkbox" value="2" />
+            <input type="checkbox" name="digits" value="2" />
             2
           </label>
           <label class="tickbox">
-            <input type="checkbox" value="1" />
+            <input type="checkbox" name="digits" value="1" />
             1
           </label>
         </div>
