--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="options.css" />
     <script
       defer
       type="text/javascript"
-      src="thirdParty/chrome-extension-async.js"
+      src="../thirdParty/chrome-extension-async.js"
     ></script>
     <script defer type="module" src="options.js"></script>
   </head>
@@ -14,9 +14,9 @@
     <header class="maria__heading maria__heading--spaced">
       <img
         class="maria__image"
-        width="128"
-        height="128"
-        src="images/maria_128x128.png"
+        width="100"
+        height="100"
+        src="../images/maria_128x128.png"
         alt="Maria"
       />
       <h1>
