--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="popup.css" />
     <script
       defer
       type="text/javascript"
-      src="thirdParty/chrome-extension-async.js"
+      src="../thirdParty/chrome-extension-async.js"
     ></script>
     <script defer type="module" src="popup.js"></script>
   </head>
@@ -17,7 +17,7 @@
           class="maria__image"
           width="48"
           height="48"
-          src="images/maria_48x48.png"
+          src="../images/maria_48x48.png"
           alt="Maria"
         />
         <div class="maria__title">Maria</div>
