--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+	<title>Options | Maria</title>
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="options.css" />
     <script
