--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="popup.css" />
-    <script
-      defer
-      type="text/javascript"
-      src="../thirdParty/chrome-extension-async.js"
-    ></script>
+    <link rel="stylesheet" type="text/css" href="popup.css" />
+    <!-- <script type="application/javascript" src="browser-polyfill.js"></script> -->
     <script defer type="module" src="popup.js"></script>
   </head>
   <body class="maria">
@@ -17,7 +12,7 @@
           class="maria__image"
           width="48"
           height="48"
-          src="../images/maria_48x48.png"
+          src="../assets/maria_48x48.png"
           alt="Maria"
         />
         <div class="maria__title">Maria</div>
