--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<title>Options | Maria</title>
-    <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="options.css" />
-    <script
-      defer
-      type="text/javascript"
-      src="../thirdParty/chrome-extension-async.js"
-    ></script>
+    <title>Options | Maria</title>
+    <link rel="stylesheet" type="text/css" href="options.css" />
+    <!-- <script type="application/javascript" src="browser-polyfill.js"></script> -->
     <script defer type="module" src="options.js"></script>
   </head>
   <body class="maria">
@@ -17,7 +12,7 @@
         class="maria__image"
         width="100"
         height="100"
-        src="../images/maria_128x128.png"
+        src="../assets/maria_128x128.png"
         alt="Maria"
       />
       <h1>
