--- a/src/options/options.html
+++ b/src/options/options.html
@@ -3,7 +3,6 @@
   <head>
     <title>Options | Maria</title>
     <link rel="stylesheet" type="text/css" href="options.css" />
-    <!-- <script type="application/javascript" src="browser-polyfill.js"></script> -->
     <script defer type="module" src="options.js"></script>
   </head>
   <body class="maria">
@@ -12,7 +11,7 @@
         class="maria__image"
         width="100"
         height="100"
-        src="../assets/maria_128x128.png"
+        src="assets/maria_128x128.png"
         alt="Maria"
       />
       <h1>
