--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="popup.css" />
-    <!-- <script type="application/javascript" src="browser-polyfill.js"></script> -->
     <script defer type="module" src="popup.js"></script>
   </head>
   <body class="maria">
@@ -12,7 +11,7 @@
           class="maria__image"
           width="48"
           height="48"
-          src="../assets/maria_48x48.png"
+          src="assets/maria_48x48.png"
           alt="Maria"
         />
         <div class="maria__title">Maria</div>
