Renaming. Improving Tab Store.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="popup.css" />
-    <script defer type="module" src="popup.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=500" />
+    <title>Popup | Maria</title>
   </head>
   <body class="maria">
     <div class="popup">
@@ -15,6 +16,16 @@
           alt="Maria"
         />
         <div class="maria__title">Maria</div>
+      </div>
+
+      <div id="tabStoreOption">
+        <hr />
+        <div class="maria__subtitle">Tab Store</div>
+        <div class="maria__buttons">
+          <button id="openTabStore" class="mra-button mra-button--primary">
+            Open tab store
+          </button>
+        </div>
       </div>
 
       <div id="magicNumbersOption">
