--- a/src/background/background.html
+++ b/src/background/background.html
@@ -1,6 +1,7 @@
-<html>
-  <head></head>
-  <body>
-    <script src="background.js"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+  </head>
+  <body></body>
 </html>
