--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Options | Maria</title>
-    <link rel="stylesheet" type="text/css" href="options.css" />
-    <script defer type="module" src="options.js"></script>
   </head>
   <body class="maria">
     <header class="maria__heading maria__heading--spaced">
