Fix array move. Neaten up some styles.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -14,7 +14,7 @@
         src="assets/maria_128x128.png"
         alt="Maria"
       />
-      <h1>
+      <h1 class="maria__title">
         Maria options
       </h1>
     </header>
