--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -15,21 +15,24 @@
           src="assets/maria_48x48.png"
           alt="Maria"
         />
-        <div class="maria__title">Maria</div>
+        <h1 class="maria__title">Maria</h1>
       </div>
 
       <div id="tabStoreOption">
-        <hr />
+        <hr class="mra-hr" />
         <div class="maria__subtitle">Tab Store</div>
         <div class="maria__buttons">
-          <button id="openTabStore" class="mra-button mra-button--primary">
+          <button
+            id="openTabStore"
+            class="mra-button mra-button--primary mra-button--full-width"
+          >
             Open tab store
           </button>
         </div>
       </div>
 
       <div id="magicNumbersOption">
-        <hr />
+        <hr class="mra-hr" />
         <div class="maria__subtitle">Magic Numbers</div>
         <div class="maria__buttons">
           <button id="processNumbers" class="mra-button mra-button--primary">
@@ -42,12 +45,12 @@
       </div>
 
       <div id="downloadGalleryOption" style="display: none;">
-        <hr />
+        <hr class="mra-hr" />
         <div class="maria__subtitle">Download Gallery</div>
         <div class="maria__buttons">
           <button
             id="downloadGallery"
-            class="mra-button mra-button--primary mra-downloader"
+            class="mra-button mra-button--primary mra-button--full-width"
             disabled
           >
             Download
