--- a/src/options/options.html
+++ b/src/options/options.html
@@ -22,27 +22,27 @@
       <div>
         Select number lengths to process
         <div class="digit-options">
-          <label class="mra-tickbox">
+          <label class="maria-tickbox">
             <input type="checkbox" name="digits" value="6" />
             6
           </label>
-          <label class="mra-tickbox">
+          <label class="maria-tickbox">
             <input type="checkbox" name="digits" value="5" />
             5
           </label>
-          <label class="mra-tickbox">
+          <label class="maria-tickbox">
             <input type="checkbox" name="digits" value="4" />
             4
           </label>
-          <label class="mra-tickbox">
+          <label class="maria-tickbox">
             <input type="checkbox" name="digits" value="3" />
             3
           </label>
-          <label class="mra-tickbox">
+          <label class="maria-tickbox">
             <input type="checkbox" name="digits" value="2" />
             2
           </label>
-          <label class="mra-tickbox">
+          <label class="maria-tickbox">
             <input type="checkbox" name="digits" value="1" />
             1
           </label>
