--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -19,12 +19,12 @@
       </div>
 
       <div id="tabStoreOption">
-        <hr class="mra-hr" />
+        <hr class="maria-hr" />
         <div class="maria__subtitle">Tab Store</div>
         <div class="maria__buttons">
           <button
             id="openTabStore"
-            class="mra-button mra-button--primary mra-button--full-width"
+            class="maria-button maria-button--primary maria-button--full-width"
           >
             Open tab store
           </button>
@@ -32,31 +32,34 @@
       </div>
 
       <div id="magicNumbersOption">
-        <hr class="mra-hr" />
+        <hr class="maria-hr" />
         <div class="maria__subtitle">Magic Numbers</div>
         <div class="maria__buttons">
-          <button id="processNumbers" class="mra-button mra-button--primary">
+          <button
+            id="processNumbers"
+            class="maria-button maria-button--primary"
+          >
             Process numbers
           </button>
-          <button id="removeLinks" class="mra-button mra-button--primary">
+          <button id="removeLinks" class="maria-button maria-button--primary">
             Remove links
           </button>
         </div>
       </div>
 
       <div id="downloadGalleryOption" style="display: none;">
-        <hr class="mra-hr" />
+        <hr class="maria-hr" />
         <div class="maria__subtitle">Download Gallery</div>
         <div class="maria__buttons">
           <button
             id="downloadGallery"
-            class="mra-button mra-button--primary mra-button--full-width"
+            class="maria-button maria-button--primary maria-button--full-width"
             disabled
           >
             Download
           </button>
         </div>
-        <div class="mra-progress">
+        <div class="maria-progress">
           <div id="downloadMessage"></div>
           <div id="filesQueued"></div>
           <div id="filesLoaded"></div>
