--- a/src/tabStore/tabStore.html
+++ b/src/tabStore/tabStore.html
@@ -18,9 +18,16 @@
       <div class="flex-spacer"></div>
       <div class="tab-store-actions">
         <button
+          id="exportImport"
+          type="button"
+          class="maria-button maria-button--primary"
+        >
+          Export/Import
+        </button>
+        <button
           id="addNewGroup"
           type="button"
-          class="mra-button mra-button--primary"
+          class="maria-button maria-button--primary"
         >
           Add new tab group
         </button>
