Attempting to make the transitions nicer.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: min-content;">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=500" />
+    <meta name="viewport" content="width=250" />
     <title>Popup | Maria</title>
   </head>
   <body class="maria">
