RSS feed work part 1.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -138,6 +138,20 @@
           </div>
         </div>
 
+        <div id="rssReaderOption">
+          <hr class="maria-hr" />
+          <div class="maria__subtitle">RSS Viewer</div>
+          <div class="maria__buttons">
+            <button
+              id="openRSSViewer"
+              type="button"
+              class="maria-button maria-button--primary maria-button--full-width"
+            >
+              Open RSS Viewer
+            </button>
+          </div>
+        </div>
+
         <div id="magicNumbersOption">
           <hr class="maria-hr" />
           <div class="maria__subtitle">Magic Numbers</div>
@@ -176,6 +190,18 @@
             <div id="downloadMessage"></div>
             <div id="filesQueued"></div>
             <div id="filesLoaded"></div>
+          </div>
+        </div>
+
+        <div id="subscribeToFeed" style="display: none;">
+          <hr class="maria-hr" />
+          <div class="maria__buttons">
+            <button
+              id="feedSubscribe"
+              type="button"
+              class="maria-button maria-button--primary maria-button--full-width"
+              disabled
+            ></button>
           </div>
         </div>
       </div>
