Working rss viewer.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -118,36 +118,35 @@
               id="openDateCalculator"
               type="button"
               class="maria-button maria-button--primary maria-button--full-width"
+              aria-label="Open date calculator"
             >
-              Date calculator
+              <span aria-hidden="true">Date calculator</span>
             </button>
           </div>
         </div>
 
         <div id="tabStoreOption">
-          <hr class="maria-hr" />
-          <div class="maria__subtitle">Tab Store</div>
           <div class="maria__buttons">
             <button
               id="openTabStore"
               type="button"
               class="maria-button maria-button--primary maria-button--full-width"
+              aria-label="Open tab store"
             >
-              Open tab store
+              <span aria-hidden="true">Tab store</span>
             </button>
           </div>
         </div>
 
         <div id="rssReaderOption">
-          <hr class="maria-hr" />
-          <div class="maria__subtitle">RSS Viewer</div>
           <div class="maria__buttons">
             <button
               id="openRSSViewer"
               type="button"
               class="maria-button maria-button--primary maria-button--full-width"
+              aria-label="Open rss viewer"
             >
-              Open RSS Viewer
+              <span aria-hidden="true">RSS Viewer</span>
             </button>
           </div>
         </div>
