--- a/src/rssViewer/rssViewer.html
+++ b/src/rssViewer/rssViewer.html
@@ -19,7 +19,10 @@
     </header>
     <main>
       <div id="rssViewer" class="rss-viewer">
-        <ul id="feeds" class="rss-viewer__options feed"></ul>
+        <div class="rss-viewer__options">
+          <h2 class="rss-viewer__title">Feeds</h2>
+          <ul id="feeds" class="feed"></ul>
+        </div>
         <div id="content" class="rss-viewer__content viewer"></div>
       </div>
     </main>
