RSS feed update checker.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -146,7 +146,7 @@
               class="maria-button maria-button--primary maria-button--full-width"
               aria-label="Open rss viewer"
             >
-              <span aria-hidden="true">RSS Viewer</span>
+              <span aria-hidden="true">RSS viewer</span>
             </button>
           </div>
         </div>
