RSS Check updates button

--- a/src/rssViewer/rssViewer.html
+++ b/src/rssViewer/rssViewer.html
@@ -21,6 +21,15 @@
       <div id="rssViewer" class="rss-viewer">
         <div class="rss-viewer__options">
           <h2 class="rss-viewer__title">Feeds</h2>
+          <button
+            id="checkUpdates"
+            class="maria-button check-updates-button"
+            type="button"
+            aria-label="Check feeds for updates"
+            title="Check feeds for updates"
+          >
+            <span aria-hidden="true">&#8635;</span>
+          </button>
           <ul id="feeds" class="feed"></ul>
         </div>
         <div id="content" class="rss-viewer__content viewer"></div>
