Resolve some rss update checker issues.

--- a/src/rssViewer/rssViewer.html
+++ b/src/rssViewer/rssViewer.html
@@ -28,7 +28,9 @@
             aria-label="Check feeds for updates"
             title="Check feeds for updates"
           >
-            <span aria-hidden="true">&#8635;</span>
+            <span class="check-updates-button__icon" aria-hidden="true"
+              >&#8635;</span
+            >
           </button>
           <ul id="feeds" class="feed"></ul>
         </div>
