Put greeting behind an option.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -20,6 +20,12 @@
     </header>
     <main>
       <div>
+        <label class="maria-tickbox">
+          <input type="checkbox" name="greeting" checked="false" />
+          Should play greeting
+        </label>
+      </div>
+      <div>
         Select number lengths to process
         <div class="digit-options">
           <label class="maria-tickbox">
