--- a/src/options/options.html
+++ b/src/options/options.html
@@ -19,13 +19,14 @@
       </h1>
     </header>
     <main>
-      <div>
+      <div class="options-section">
+        On startup
         <label class="maria-tickbox">
           <input type="checkbox" name="greeting" checked="false" />
           Should play greeting
         </label>
       </div>
-      <div>
+      <div class="options-section">
         Select number lengths to process
         <div class="digit-options">
           <label class="maria-tickbox">
