--- a/src/rssViewer/rssViewer.html
+++ b/src/rssViewer/rssViewer.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/maria_16x16.png" />
     <title>RSS Viewer | Maria</title>
   </head>
   <body class="maria">
