Improve feed loading UX

--- a/src/rssViewer/rssViewer.html
+++ b/src/rssViewer/rssViewer.html
@@ -22,6 +22,7 @@
       <div id="rssViewer" class="rss-viewer">
         <div class="rss-viewer__options">
           <h2 class="rss-viewer__title">Feeds</h2>
+          <p id="rssViewerMeta" class="rss-viewer__meta"></p>
           <button
             id="checkUpdates"
             class="maria-button check-updates-button"
