Fix for width of extension popup

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="height: min-content">
+<html lang="en" style="height: min-content; width: min-content">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=250" />
@@ -54,7 +54,9 @@
             <button
               id="calculateDate"
               type="submit"
-              class="maria-button maria-button--primary maria-button--full-width"
+              class="
+                maria-button maria-button--primary maria-button--full-width
+              "
             >
               Calculate
             </button>
@@ -90,7 +92,9 @@
             <button
               id="calculateDate"
               type="submit"
-              class="maria-button maria-button--primary maria-button--full-width"
+              class="
+                maria-button maria-button--primary maria-button--full-width
+              "
             >
               Calculate
             </button>
@@ -123,7 +127,9 @@
             <button
               id="openDateCalculator"
               type="button"
-              class="maria-button maria-button--primary maria-button--full-width"
+              class="
+                maria-button maria-button--primary maria-button--full-width
+              "
               aria-label="Open date calculator"
             >
               <span aria-hidden="true">Date calculator</span>
@@ -136,7 +142,9 @@
             <button
               id="openTabStore"
               type="button"
-              class="maria-button maria-button--primary maria-button--full-width"
+              class="
+                maria-button maria-button--primary maria-button--full-width
+              "
               aria-label="Open tab store"
             >
               <span aria-hidden="true">Tab store</span>
@@ -149,7 +157,9 @@
             <button
               id="openRSSViewer"
               type="button"
-              class="maria-button maria-button--primary maria-button--full-width"
+              class="
+                maria-button maria-button--primary maria-button--full-width
+              "
               aria-label="Open rss viewer"
             >
               <span aria-hidden="true">RSS viewer</span>
@@ -185,7 +195,9 @@
             <button
               id="downloadGallery"
               type="button"
-              class="maria-button maria-button--primary maria-button--full-width"
+              class="
+                maria-button maria-button--primary maria-button--full-width
+              "
               disabled
             >
               Download
@@ -204,7 +216,9 @@
             <button
               id="feedSubscribe"
               type="button"
-              class="maria-button maria-button--primary maria-button--full-width"
+              class="
+                maria-button maria-button--primary maria-button--full-width
+              "
               disabled
             ></button>
           </div>
