Fix feed update check from dropping data. Add "mark all read" button

--- a/src/rssViewer/rssViewer.html
+++ b/src/rssViewer/rssViewer.html
@@ -34,6 +34,17 @@
               >&#8635;</span
             >
           </button>
+          <button
+            id="markAllRead"
+            class="maria-button mark-all-read-button"
+            type="button"
+            aria-label="Mark all as read"
+            title="Mark all as read"
+          >
+            <span class="mark-all-read-button__icon" aria-hidden="true"
+              >&#x2709;</span
+            >
+          </button>
           <ul id="feeds" class="feed"></ul>
         </div>
         <div id="content" class="rss-viewer__content viewer"></div>
